<resources>
    <string name="fragment_deployed_bin">DeployedBinFragment</string>
    <string name="activity_deployment_history">Deployment History</string>
    <string name="app_name">Basura Juan</string>
    <string name="hint_fname">First Name</string>
    <string name="hint_disconnect">Disconnect</string>
    <string name="hint_email">Email</string>
    <string name="hint_mname">Middle Initial</string>
    <string name="hint_lname">Last Name</string>
    <string name="err_bin_name">Duplicate bin name</string>
    <string name="hint_uname">Username</string>
    <string name="hint_pword">Password</string>
    <string name="activity_navigate_bin">Navigate Bin</string>
    <string name="hint_go_to_login">Already have an account? <u>Click here to login</u></string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="title_toolbar">Basura Juan</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hint_ip_address">IP address</string>
    <string name="hint_bin_name">Bin Name</string>
    <string name="hint_bin_id">Bin ID</string>
    <string name="action_settings">Settings</string>
    <string name="err_msg_email">Enter a valid email</string>
    <string name="err_msg_name">Enter your username</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="deployment_history_activity">Deploy Bin</string>
    <string name="user_profile_activity">Account Settings</string>
    <string name="err_msg_fname">Enter your first name</string>
    <string name="err_msg_lname">Enter your last name</string>
    <string name="err_msg_minitial">Enter your middle initial</string>
    <string name="err_msg_ip_address">Enter IP address</string>
    <string name="err_msg_bin_name">Enter bin name</string>
    <string name="hotlist">Notification here</string>
    <string name="none_paired">No pair device</string>
    <string name="scanning">Scanning device</string>
    <string name="select_device">Selected Device</string>
    <string name="none_found">No Device found</string>
    <string name="paired_devices">Choose a paired Bluetooth device</string>
    <string name="binlist_activity">List of Bins</string>
    <string name="delete">DELETE</string>
    <string name="search_deployed_bin">Search deployed bin</string>
    <string name="search_placeholder">Search bin name...</string>
    <string name="err_select_image">Select a picture</string>
    <string name="edit_bin">Edit bin</string>
    <string name="update_bin">Update bin</string>
    <string name="deployment_history_toolbar_title">Deployment</string>

    <string-array name="nav_item_activity_titles">
        <item>Account Settings</item>
        <item>List of Registered Bins</item>
        <item>Deployment History</item>
        <item>Logout</item>
    </string-array>
    <string name="notification_item">Notification</string>
    <string name="title_activity_maps">Map</string>
    <string name="actual_location">Actual location required.</string>
</resources>
