<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg"

    app:layout_collapseParallaxMultiplier="0.9"
    tools:context="com.example.apaodevo.basura_juan.Activities.RegisterUserActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_fname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="150dp"
        android:gravity="center">

        <EditText
            android:id="@+id/etFname"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="47dp"

            android:hint="@string/hint_fname"
            android:singleLine="true" />


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_minitial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="250dp"
        android:gravity="center">

        <EditText
            android:id="@+id/etMinitial"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_mname"
            android:maxLength="1" />
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_lname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:gravity="center">

        <EditText
            android:id="@+id/etLname"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_lname" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:gravity="center">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_uname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:gravity="center">

        <EditText
            android:id="@+id/etUname"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_uname"
            android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_pword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:gravity="center">

        <EditText
            android:id="@+id/etPword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_pword"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>


    <RelativeLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_login_user"
            android:layout_width="90dp"
            android:layout_height="120dp"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:scaleType="centerInside"
            android:src="@drawable/user_profile_placeholder" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_update"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="420dp"
        android:background="@drawable/rounded_edittext"
        android:backgroundTint="@color/colorMaroon"
        android:text="Update"
        android:textColor="@color/colorWhite" />

</android.support.design.widget.CoordinatorLayout>
