<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/userLayout"
    android:background="@color/colorBg"

    app:layout_collapseParallaxMultiplier="0.9"
    tools:context="com.example.apaodevo.basura_juan.Activities.RegisterUserActivity">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_fname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="120dp"
            android:gravity="center">

            <EditText
                android:id="@+id/et_fname"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="47dp"
                android:inputType="textCapSentences"
                android:hint="@string/hint_fname"
                android:maxLines="1" />


        </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_minitial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:gravity="center">

        <EditText
            android:id="@+id/et_minitial"
            android:maxLength="1"
            android:maxLines="1"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_mname"
            android:inputType="textCapSentences"/>
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_lname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:gravity="center">

        <EditText
            android:id="@+id/et_lname"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_lname"
            android:maxLines="1"
            android:inputType="textCapSentences"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="270dp"
        android:gravity="center">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:maxLines="1"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_uname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        android:gravity="center">

        <EditText
            android:id="@+id/et_uname"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_uname"
            android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_pword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="370dp"
        android:gravity="center">

        <EditText
            android:id="@+id/et_pword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:maxLines="1"
            android:hint="@string/hint_pword"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="300dp"
        android:backgroundTint="@color/colorMaroon"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:layout_gravity="center"
        android:layout_marginTop="400dp"
        android:background="@drawable/rounded_edittext"
        android:text="Submit" />

    <TextView
        android:id="@+id/et_go_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="480dp"
        android:backgroundTint="@color/colorMaroon"
        android:text="@string/hint_go_to_login"
        android:textAlignment="center"
        android:textSize="14dp"
        android:textStyle="bold"></TextView>
    
    <RelativeLayout
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgUserProfile"
            android:layout_width="90dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:scaleType="centerInside"
            android:src="@drawable/user_profile_placeholder" />

        <TextView
            android:id="@+id/tvImgUserProfile"
            android:layout_width="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_centerInParent="true"
            android:layout_toRightOf="@id/imgUserProfile"
            android:gravity="center"
            android:layout_height="wrap_content" />
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
